1023 최신순 정렬 기능 추가

--- a/board/src/main/resources/templates/boardList.html
+++ b/board/src/main/resources/templates/boardList.html
@@ -31,6 +31,7 @@
 <body>
 	<div class="layout">
 		<a th:href="@{/board/write}">글 작성</a>
+		<a th:href="@{/board/list(sort='latest')}">최신순</a>
 		<table>
 			<thead>
 				<tr>
